Exoflight/src/com/fasterlight/exo/seq/SeqlangParser.java
/* Generated By:JavaCC: Do not edit this line. SeqlangParser.java */
package com.fasterlight.exo.seq;

import java.util.*;

import com.fasterlight.exo.orbit.Constants;
import com.fasterlight.util.*;
import com.fasterlight.vecmath.*;

public class SeqlangParser
implements Constants, SeqlangParserConstants {
        private Sequencer seq;
        private String cur_desc = null;
        private Map labels = new HashMap();
        private Map branchnodes = new HashMap();
        private boolean goteof;
        private List imports = new ArrayList();

        public void addImport(String s)
        {
                if (s == null)
                        throw new IllegalArgumentException();
                imports.add(s);
        }

        private void addDefaultImports()
        {
                if (imports.size() == 0)
                {
                        imports.add("com.fasterlight.exo.orbit.*");
                        imports.add("com.fasterlight.exo.orbit.traj.*");
                        imports.add("com.fasterlight.exo.game.*");
                        imports.add("com.fasterlight.exo.ship.*");
                        imports.add("com.fasterlight.exo.ship.progs.*");
                        imports.add("com.fasterlight.exo.crew.*");
                        imports.add("com.fasterlight.exo.strategy.*");
                        imports.add("com.fasterlight.math.*");
                        imports.add("com.fasterlight.game.*");
                }
        }

        public Class resolveClassFromImports(String s)
        {
                addDefaultImports();

                Iterator it = imports.iterator();
                while (it.hasNext())
                {
                        String cn = null;
                        String impdecl = (String)it.next();
                        if (impdecl.endsWith("*"))
                        {
                                cn = impdecl.substring(0, impdecl.length()-1) + s;
                        } else if (impdecl.endsWith(s))
                        {
                                cn = impdecl;
                        }
                        if (cn != null)
                        {
                                try {
                                        cn = cn.replace('/','.');
                                        return Class.forName(cn); // if class found, return
                                } catch (Exception e) {
                                }
                        }
                }
                return null; // class not found
        }

        public boolean eof()
        {
                return goteof;
        }

        public void setSequencer(Sequencer seq)
        {
                this.seq = seq;
        }

        public Sequencer getSequencer()
        {
                return seq;
        }

        void addNode(SequencerNode node)
        {
                node.setDescription(cur_desc);
                seq.addNode(node);
        }

        void addBranchNode(BranchNode bnode, String label)
        {
                branchnodes.put(bnode, label);
                addNode(bnode);
        }

        void addLabel(String labelid)
        throws ParseException
        {
                if (labels.get(labelid) != null)
                        throw new ParseException("Label `" + labelid + "' is already defined");
                labels.put(labelid, new Integer(seq.getNodeCount()));
        }

        void resolveLabels()
        throws ParseException
        {
                Iterator it = branchnodes.entrySet().iterator();
                while (it.hasNext())
                {
                        Map.Entry entry = (Map.Entry)it.next();
                        BranchNode bnode = (BranchNode)entry.getKey();
                        String labelid = (String)entry.getValue();
                        if (labelid != null)
                        {
                                int nodenum = getLabel(labelid);
                                if (nodenum < 0)
                                        throw new ParseException("Could not resolve label `" + labelid + "'");
                                bnode.setNodeIndex(nodenum);
                        }
                }
        }

        int getLabel(String labelid)
        {
                Integer i = (Integer)labels.get(labelid);
                if (i == null)
                        return -1;
                else
                        return i.intValue();
        }

        public void parse()
        throws ParseException
        {
                if (seq == null)
                        throw new IllegalArgumentException("Must setSequencer() first");
                Sequence();
                resolveLabels();
        }

        class PropertyObj
        {
                String pn;
                PropertyObj(String pn)
                {
                        this.pn = pn;
                }
        }

        class NewObject
        extends PropertyObj
        {
                NewObject(String cname)
                throws ParseException
                {
                        super(cname);
                        Class clazz = resolveClassFromImports(cname);
                        if (clazz == null)
                                throw new ParseException("Could not resolve class '" + cname + "'");
                        // todo: make an arg. of propertynode
                        this.pn = "game.classloader." + clazz.getName().replace('.','/');
                }
        }

/*****************************************
 *****************************************/
  final public void Sequence() throws ParseException {
        String name;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
      jj_consume_token(0);
                goteof = true;
      break;
    case SEQUENCE:
      jj_consume_token(SEQUENCE);
      name = QuoteStr();
                        seq.setName(name);
      jj_consume_token(LBRACE);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case WAIT:
        case GOTO:
        case STOP:
        case SET:
        case CANCEL:
        case IDENT_LITERAL:
        case QUOTED_LITERAL:
        case IDENTIFIER:
        case ATSIGN:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        SequenceStatement();
      }
      jj_consume_token(RBRACE);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void SequenceStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QUOTED_LITERAL:
      DescStmt();
      break;
    case WAIT:
    case GOTO:
    case STOP:
    case SET:
    case CANCEL:
    case IDENT_LITERAL:
    case IDENTIFIER:
    case ATSIGN:
      NotDescStmt();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void NotDescStmt() throws ParseException {
    if (jj_2_1(2)) {
      SetStmt();
    } else if (jj_2_2(3)) {
      WaitStmt();
    } else if (jj_2_3(3)) {
      CondWaitStmt();
    } else if (jj_2_4(2)) {
      LabelStmt();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GOTO:
        GotoStmt();
        break;
      case STOP:
        StopStmt();
        break;
      case SET:
      case CANCEL:
        SetAbortStmt();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                        cur_desc = null;
  }

  final public void DescStmt() throws ParseException {
        String s;
    s = QuoteStr();
                        cur_desc = s;
  }

  final public void SetStmt() throws ParseException {
        PropertyObj lexpr;
        Object rexpr;
        boolean opt=false;
    lexpr = Lexpr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASSIGN:
      jj_consume_token(ASSIGN);
      break;
    case ASSIGNOPT:
      jj_consume_token(ASSIGNOPT);
                       opt=true;
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    rexpr = Rexpr();
    jj_consume_token(SEMICOLON);
                        if (rexpr instanceof PropertyObj)
                                addNode(new PropertySetNode(lexpr.pn, ((PropertyObj)rexpr).pn, null, true, opt));
                        else
                                addNode(new PropertySetNode(lexpr.pn, rexpr, null, false, opt));
  }

  final public void LabelStmt() throws ParseException {
        String labelid;
    labelid = IdentStr();
    jj_consume_token(COLON);
                addLabel(labelid);
  }

  final public void GotoStmt() throws ParseException {
        String labelid;
    jj_consume_token(GOTO);
    labelid = IdentStr();
    jj_consume_token(SEMICOLON);
                addBranchNode(new BranchNode(), labelid);
  }

  final public void SetAbortStmt() throws ParseException {
        String abortid,labelid;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SET:
      jj_consume_token(SET);
      jj_consume_token(ABORT);
      abortid = QuoteStr();
      jj_consume_token(GOTO);
      labelid = IdentStr();
      jj_consume_token(SEMICOLON);
                addBranchNode(new SetAbortNode(abortid), labelid);
      break;
    case CANCEL:
      jj_consume_token(CANCEL);
      jj_consume_token(ABORT);
      abortid = QuoteStr();
      jj_consume_token(SEMICOLON);
                addBranchNode(new SetAbortNode(abortid), null);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void StopStmt() throws ParseException {
    jj_consume_token(STOP);
    jj_consume_token(SEMICOLON);
                addNode(new StopNode());
  }

  final public void WaitStmt() throws ParseException {
        long t;
        boolean dur=false;
    jj_consume_token(WAIT);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case UNTIL:
      jj_consume_token(UNTIL);
      break;
    case FOR:
      jj_consume_token(FOR);
                                  dur=true;
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    t = Duration();
    jj_consume_token(SEMICOLON);
                        addNode(new TimeWaitNode(t, dur ? TimeWaitNode.DURATION : TimeWaitNode.RELATIVE));
  }

  final public void CondWaitStmt() throws ParseException {
        Condition cond;
        long interval, timeout=0;
    jj_consume_token(WAIT);
    jj_consume_token(FOR);
    jj_consume_token(CONDITION);
    jj_consume_token(LPAREN);
    cond = Cond();
    jj_consume_token(RPAREN);
    jj_consume_token(INTERVAL);
    interval = Duration();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TIMEOUT:
      jj_consume_token(TIMEOUT);
      timeout = Duration();
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(SEMICOLON);
                        addNode(new ConditionWaitNode(cond, interval, timeout));
  }

  final public Condition Cond() throws ParseException {
        Condition c,d;
    c = Cond2();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OR:
      jj_consume_token(OR);
      d = Cond();
                                    c=new OrCondition(c,d);
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
                        {if (true) return c;}
    throw new Error("Missing return statement in function");
  }

  final public Condition Cond2() throws ParseException {
        Condition c,d;
    c = Cond3();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
      jj_consume_token(AND);
      d = Cond2();
                                      c=new AndCondition(c,d);
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
                        {if (true) return c;}
    throw new Error("Missing return statement in function");
  }

  final public Condition Cond3() throws ParseException {
        Condition c;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      jj_consume_token(NOT);
      c = Cond3();
                        {if (true) return new NotCondition(c);}
      break;
    case IDENT_LITERAL:
    case IDENTIFIER:
    case LPAREN:
    case ATSIGN:
      c = Cond4();
                        {if (true) return c;}
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Condition Cond4() throws ParseException {
        PropertyObj lexpr;
        Object rexpr;
        int op;
        Condition c;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
      jj_consume_token(LPAREN);
      c = Cond();
      jj_consume_token(RPAREN);
                        {if (true) return c;}
      break;
    case IDENT_LITERAL:
    case IDENTIFIER:
    case ATSIGN:
      lexpr = Lexpr();
      op = RelOp();
      rexpr = Rexpr();
                        if (rexpr instanceof PropertyObj)
                                {if (true) return new PropertyCondition(lexpr.pn, ((PropertyObj)rexpr).pn, op, true);}
                        else
                                {if (true) return new PropertyCondition(lexpr.pn, rexpr, op);}
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public int RelOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
      jj_consume_token(EQ);
                       {if (true) return Condition.OP_EQ;}
      break;
    case NE:
      jj_consume_token(NE);
                       {if (true) return Condition.OP_NE;}
      break;
    case LT:
      jj_consume_token(LT);
                       {if (true) return Condition.OP_LT;}
      break;
    case GT:
      jj_consume_token(GT);
                       {if (true) return Condition.OP_GT;}
      break;
    case LE:
      jj_consume_token(LE);
                       {if (true) return Condition.OP_LE;}
      break;
    case GE:
      jj_consume_token(GE);
                       {if (true) return Condition.OP_GE;}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

///
  final public long Duration() throws ParseException {
        Number n;
        double x;
    n = NumLiteral();
                        x = n.doubleValue();
                        {if (true) return (long)(x*TICKS_PER_SEC);}
    throw new Error("Missing return statement in function");
  }

  final public PropertyObj Lexpr() throws ParseException {
        PropertyObj o;
    o = Property();
                        {if (true) return o;}
    throw new Error("Missing return statement in function");
  }

  final public Object Rexpr() throws ParseException {
        Object o;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENT_LITERAL:
    case IDENTIFIER:
    case ATSIGN:
      o = Lexpr();
      break;
    case TRUE:
    case FALSE:
    case NULL:
    case NEW:
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case QUOTED_LITERAL:
    case LBRACKET:
    case LT:
    case 61:
      o = Literal();
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                        {if (true) return o;}
    throw new Error("Missing return statement in function");
  }

  final public PropertyObj Property() throws ParseException {
        PropertyObj o1,o2;
    o1 = Property2();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_2;
      }
      jj_consume_token(DOT);
      o2 = Property2();
                  o1 = new PropertyObj(o1.pn+'.'+o2.pn);
    }
                        {if (true) return o1;}
    throw new Error("Missing return statement in function");
  }

  final public PropertyObj Property2() throws ParseException {
        String s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENT_LITERAL:
    case IDENTIFIER:
      s = IdentStr();
                        {if (true) return new PropertyObj(s);}
      break;
    case ATSIGN:
      jj_consume_token(ATSIGN);
      s = IdentStr();
                        // todo?
                        {if (true) return new PropertyObj("vars." + s);}
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Number NumLiteral() throws ParseException {
        Number n;
    n = NumLiteral2();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DEG:
      jj_consume_token(DEG);
                        n = new Double(Util.toRadians(n.doubleValue()));
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
                        {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

  final public Number NumLiteral2() throws ParseException {
        Token t;
        int neg = 1;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 61:
      jj_consume_token(61);
                        neg=-1;
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      t = jj_consume_token(INTEGER_LITERAL);
                                {if (true) return new Long( Long.parseLong(t.image) * neg );}
      break;
    case FLOATING_POINT_LITERAL:
      t = jj_consume_token(FLOATING_POINT_LITERAL);
                                {if (true) return new Double( Util.parseDouble(t.image) * neg );}
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
